--- a/src/app/styles/global.css
+++ b/src/app/styles/global.css
@@ -1,5 +1,8 @@
 @keyframes rotate {
-  0% { --angle: 0deg; }
-  100% { --angle: 360deg; }
+    0% {
+        --angle: 0deg;
+    }
+    100% {
+        --angle: 360deg;
+    }
 }
-
